# causal-masterclass

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
data/: cg_data.csv  soft_skills.csv  vaccine.csv
ergodic_cd/: __init__.py
notebooks/: 1_vaccines.ipynb  2_employees.ipynb  3_discovery.ipynb
solutions/: 1_vaccines.ipynb  2_employees.ipynb  2a_deadly_sins.ipynb  3a_conditional_independence.ipynb  3b_causal_discovery.ipynb
